# stock-quant

./: .gitconfig  .gitignore  Personal Quant System V1.0 技术设计文档.md  README.md  START_HERE.md  _check_tables.py  pyproject.toml  test.txt
.claude/: settings.json
config/: cleaning.yaml  daily.yaml  execution_policy.example.json  execution_policy.generated.json  execution_policy.generated.md  web.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
quant/: __init__.py
research_store/: paper_trading.sqlite3
rust_core/: Cargo.toml
scripts/: dev.bat  dev.sh  fetch_2020_data.py  fetch_csi300_data.py  fetch_csi300_mootdx.py  fetch_csi300_mootdx_v2.py  fetch_csi500.py  fetch_full_data.py  generate_sample_data.py  import_rustdx_csv.py  update_classifications.py
tests/: test_backtest.py  test_backtest_paper_diff.py  test_backtest_viz.py  test_baidu_source.py  test_broker_adapters.py  test_broker_submission.py  test_capital_allocation.py  test_china_market_rules.py  test_collector.py  test_collector_fallback.py  test_config_health.py  test_daily_config.py  test_daily_report.py  test_daily_source_auto.py  test_daily_workflow.py  test_data_cleaning.py  test_data_quality_report.py  test_drift_report.py  test_events_app.py  test_execution_audit.py  test_execution_authorization.py  test_execution_dashboard.py  test_execution_day_end_report.py  test_execution_refresh.py  test_live_rehearsal.py  test_manual_execution.py  test_manual_fill_import.py  test_manual_reconcile.py  test_monitoring_alerts.py  test_monitoring_history.py  test_monitoring_metrics.py  (+26 more)
(+545 files in other folders)
