[project]
name = "personal-quant-system"
version = "0.1.0"
description = "Personal A-share low-frequency quant research and paper-trading system."
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
data = [
  "akshare",
]
dev = [
  "pytest>=8.0",
]
web = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "websockets>=12.0",
  "pyyaml>=6.0",
  "httpx>=0.27",
]
mcp = [
  "mcp>=1.2.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
